--- a/apps/color-bomb/src/index.html
+++ b/apps/color-bomb/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ColorBomb</title>
+    <title>Color Bomb</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <color-bomb-root></color-bomb-root>
+    <cb-root></cb-root>
   </body>
 </html>
